# aegis

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  docs.yml
docs/: bio.rst  index.rst  ssl.rst  stack.rst  x509.rst
include/aegis/: connection.hpp  constants.hpp  context.hpp  error.hpp  io.hpp  key.hpp  memory.hpp  stack.hpp  string.hpp  types.hpp  x509.hpp
src/: connection.cxx  context.cxx  error.cxx  io.cxx  key.cxx  stack.cxx  string.cxx  x509.cxx
